# interpreting-monoids

./: .gitignore  README.md  pyproject.toml
core/: __init__.py  algebra.py  checkpoint.py  data.py  model.py  trainer.py
experiments/: P165_d128_h4_mlp512_s1.pt  attention_embedding.py  character_fitting.py  embedding_fft.py  fve.py  mlp_frequencies.py  ov_principal_angles.py  pca_fve.py  train_sweep.py  training_curves.py
notebooks/: monoid-165-embedding.ipynb  monoid-165-unembed.ipynb
